Batch emails added
